--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,55 @@ header {
     cursor: pointer;
 }
 
+.alert-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+.alert-box {
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+}
+
+.alert-box button {
+    background-color: #5c8a8a;
+    height: 30px;
+    width: 100px;
+    color: #000;
+    border-radius: 10px;
+    border-style: dashed;
+    cursor: pointer;
+}
+
+.alert-box p {
+    width: 80px;
+
+}
+
+.alert-box input {
+    border-style: solid;
+    border-radius: 5px;
+    height: 20px;
+}
+
+.inputNotLoggedIn {
+    display: flex;
+    justify-content: left;
+    height: 30px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
 .picture {
     height: auto;
     width: 500px;
@@ -120,45 +169,4 @@ header {
 
 .lastcommandspace {
     color: #669999;
-}
-
-.onFlex {
-    height: 70px;
-    width: 300px;
-    border-radius: 10px;
-    background-color: #5c8a8a;
-    border-style: dashed;
-    margin: 10px;
-    justify-content: left ;
-    display: flex;
-}
-
-.onFlex a {
-   text-decoration: none;
-   color: #000;
-}
-
-
-.onFlex1{
-    overflow: hidden;
-}
-
-.onFlex1 img {
-    height: 65px;
-    width: 65px;
-    border-radius: 10px;
-    padding: 3px;
-    background-color: none;
-}
-
-.Flexes {
-    height: auto;
-    width: auto;
-    padding: 10px;
-    margin-top: 20px ;
-    border-style: solid ;
-    border-radius: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
 }
