--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,9 @@ header {
 .lastcommandspace {
     color: #669999;
 }
+
+.dashbordIframe {
+    height: 1000px;
+    width: 100%;
+    border-style: none;
+}
